fix horizontal overflow scrolling

--- a/style.css
+++ b/style.css
@@ -12,23 +12,26 @@
 html,
 body {
     height: 100vh;
-    width: 100vw;
+    /* Nasty hack to get rid of tiny, mysterious horizontal overflow scrolling: */
+    width: 99vw;
     margin: 0;
     padding: 0;
     text-align: center;
     font-family: Helvetica, sans-serif;
-    background: #89b3fa;
+    /* TODO: Stick gradient ends to top and bottom of webpage dynamically */
+    background: linear-gradient(0deg, rgba(192,255,200,0.5), rgba(137,179,250,1) 6%, 96%, rgba(192,255,200,0.5));
 }
 #photo-gallery {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    align-items: center;
     padding-top: 0.5rem;
 }
 #photo {
     max-width: 40%;
-    padding: 0.5rem 0;
+    padding: 1rem 0;
 }
 #green {
     color: green;
